kubernasty/manifests/atmosphere/gitea/ingresses/gitea.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-in
  namespace: gitea
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-issuer-prod

spec:
  rules:
  - host: gitea.kubernasty.micahrl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-service
            port:
              number: 3000
  tls:
    - secretName: uptime-kuma-cert-backing-secret
      hosts:
        - uptime.kubernasty.micahrl.com
  tcp:
    22: "gitea/gitea-gitea-ssh:ss"
